--- a/public/css/customcss.css
+++ b/public/css/customcss.css
@@ -51,5 +51,13 @@ body {
 }
 
 .container-content {
-    
+    margin-top: -200px;
 }
+
+input[type=text] {
+    width: 400px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+
