--- a/resources/views/css/customstyle.css
+++ b/resources/views/css/customstyle.css
@@ -1,5 +1,63 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
+
 body {
     margin: 0;
     padding: 0;
-    background: rgb(197, 196, 196);
+    background: rgb(241, 241, 241);
+    font-family: 'Raleway';
+    overflow: hidden;
+}
+
+.navbar img {
+    height: 50px;
+    margin-top: -18px;
+}
+
+.navbar {
+    width: 100vw;
+    background: #fff;
+    height: 50px;
+}
+
+.navbar a {
+    color: black;
+    text-decoration: none;
+}
+
+.navbar a:hover {
+    font-weight: 700;
+}
+
+.navbar li {
+    font-size: 20px;
+    padding: 12px;  
+    float: left;
+    list-style-type: none;
+}
+
+.li-right {
+    float:right !important; 
+}
+
+.container {
+    text-align: center;
+    width: 100vw;
+    height: 100vh;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.container-content {
+    margin-top: -200px;
+    width: 500px;
+}
+
+input[type=text] {
+    width: 
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
 }
