--- a/public/css/customcss.css
+++ b/public/css/customcss.css
@@ -1,11 +1,16 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     margin: 0;
     padding: 0;
     background: rgb(241, 241, 241);
     font-family: 'Raleway';
-    overflow: hidden;
+    overflow: hidden;   
 }
 
 .navbar img {
