--- a/resources/views/css/customstyle.css
+++ b/resources/views/css/customstyle.css
@@ -56,7 +56,7 @@ body {
 }
 
 input[type=text] {
-    width: 
+    width: 400px;
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
