--- a/resources/views/css/customstyle.css
+++ b/resources/views/css/customstyle.css
@@ -3,7 +3,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: green;
+    background: red;
     font-family: 'Raleway';
 }
 
@@ -15,11 +15,11 @@ body {
 .navbar {
     width: 100vw;
     background: #fff;
-    height: 50px;
+    height: 60px;
 }
 
 .navbar a {
-    color: black;
+    color: #010101;
     text-decoration: none;
 }
 
@@ -47,16 +47,17 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    color: blue;
 }
 
 .container-content {
-    margin-top: -200px;
+    margin-top: -150px;
     width: 500px;
 }
 
 input[type=text] {
     width: 400px;
-    padding: 12px 20px;
-    margin: 8px 0;
+    padding: 14px 20px;
+    margin: 10px 5px;
     box-sizing: border-box;
 }
